# MidiKraft-electra-one

./: CMakeLists.txt  ElectraOne.cpp  ElectraOne.h
resources/: instr.json
